<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context=".FilmActivity">

    <TextView
        android:id="@+id/home_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/ajout_text"
        android:textColor="@color/colorPrimary"
        android:textSize="20dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/titre_film_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:hint="@string/titre_film_hint"
            android:inputType="textPersonName|textCapWords"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/date_film_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:hint="@string/date_film_hint"
            android:inputType="date"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <EditText
            android:id="@+id/heure_film_edit_text"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/heure_film_hint"
            android:gravity="center"
            android:inputType="time"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/note_scenario_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:hint="@string/note_scenario_film_hint"
            android:inputType="number"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/note_rea_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:hint="@string/note_realisation_film_hint"
            android:inputType="number"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/note_musique_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:hint="@string/note_musique_film_hint"
            android:inputType="number"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/description_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:hint="@string/description_hint"
            android:inputType="textMultiLine"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    </LinearLayout>



    <Button
        android:id="@+id/enregistrer_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="80dp"
        android:background="@color/colorPrimary"
        android:text="@string/save_button_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Inverse" />


</LinearLayout>


