<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/home_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/home_text"
        android:textColor="@color/colorPrimary"
        android:textSize="20dp" />

    <Button
        android:id="@+id/ajouter_film_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="80dp"
        android:background="@color/colorPrimary"
        android:text="@string/add_button_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Inverse" />

    <TextView
        android:id="@+id/textId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/liste_text"
        android:layout_gravity="center_horizontal"
        android:textSize="20dp" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/all_film_list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>


